--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -39,7 +39,7 @@ jobs:
     needs: build
     steps:
     - uses: actions/checkout@v1
-    - uses: codfish/semantic-release-action@master
+    - run: npx semantic-release
       env:
         GITHUB_TOKEN: ${{ secrets.TOKEN }}
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
