--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -4,24 +4,14 @@ on:
   push:
   pull_request:
 
-jobs:
-  format:
-    runs-on: ubuntu-18.04
-    
-    steps:
-      - uses: actions/checkout@v1
-      - uses: Geode-solutions/actions/clang-format@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
-      
+jobs:      
   build:
     runs-on: ${{ matrix.os }}
-    needs: format
 
     strategy:
       matrix:
         node-version: [10.x, 12.x]
-        os: [ubuntu-18.04, windows-2016, macOS-10.14]
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
     - uses: actions/checkout@v1
@@ -35,7 +25,7 @@ jobs:
         npm run examples
         
   semantic-release:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     needs: build
     steps:
     - uses: actions/checkout@v1
